# panel-graphic-walker

./: .gitignore  .pre-commit-config.yaml  DEVELOPER_GUIDE.md  MANIFEST.in  README.md  hatch_build.py  pixi.toml  pyproject.toml  script.py
.github/workflows/: pr_checks.yml  test.yaml
examples/: app_basic.py  app_demo.py
examples/bike_sharing/: app.py  requirements.txt
examples/bikesharing_dashboard/: app.py  bike_sharing_dc.parquet  bikesharing_dashboard.py  spec.json  streamlit_spec.json
examples/earthquake-dashboard/: app.py
examples/earthquake_dashboard/: app.css  app.py  earthquake_dashboard.py  significant_earthquake_dataset_1900_2023.parquet
examples/reference/: backends.py  server_computation.py
examples/reference_app/: app.py  reference_app.py
scripts/: create_pycafe_links.py
src/panel_gwalker/: __init__.py  __version.py  _gwalker.js  _gwalker.py  _pygwalker.py  _tabular_data.py  _utils.py
tests/: conftest.py  test_graphic_walker.py  test_graphic_walker_apps.py  test_pygwalker.py  test_tabular_data.py
