[project]
name = "panel-graphic-walker"
version = "0.5.3"
description = "A project providing a Graphic Walker Pane for use with HoloViz Panel."
readme = "README.md"
authors = [
    { name = "Philipp Rudiger", email = "philipp.jfr@gmail.com" },
    { name = "Marc Skov Madsen", email = "marc.skov.madsen@gmail.com" }
]
requires-python = ">=3.10"
dependencies = ["panel>=1.6.1rc2", "narwhals"]

[build-system]
requires = ["hatchling", "hatch-vcs", "panel>=1.6.1rc2", "packaging", "narwhals"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.custom]
path = 'hatch_build.py'

[project.optional-dependencies]
dev = [
    "jedi-language-server;sys_platform == 'linux'",
    "mypy",
    "pandas-stubs",
    "types-requests",
    "pre-commit",
    "pytest",
    "ruff",
    "watchfiles",
]
tests = [
  "aiohttp",
  "dask[dataframe]",
  "duckdb",
  "fastparquet",
  "gw-dsl-parser",
  "ibis-framework[duckdb,sqlite]",
  "polars",
  "pygwalker",
  "pytest-asyncio",
  "pytest",
  "requests",
]
examples = [
  "dask[dataframe]",
  "duckdb",
  "fastparquet",
  "gw-dsl-parser",
  "ibis-framework[duckdb,sqlite]",
  "polars",
  "pygwalker >=0.4.9.11",
  "requests",
]
kernel = [
  "duckdb ; platform_system != 'Emscripten'",
  "gw-dsl-parser ; platform_system != 'Emscripten'",
  "pygwalker ; platform_system != 'Emscripten'",
]

[tool.hatch.build.targets.wheel]
packages = ["src/panel_gwalker"]

[tool.hatch.build.targets.wheel.force-include]
"src/panel_gwalker/dist" = "panel_gwalker/dist"

[[tool.mypy.overrides]]
module = "param.*,pygwalker.*,gw_dsl_parser.*,requests.*"
ignore_missing_imports = true
